[tool.poetry]
name = "kpd"
version = "0.1.0"
description = "kivy plus django"
authors = ["Denis Snagovskiy <denis.snagovskiy@list.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]
buildozer = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
